--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "daisyui": "^2.27.0",
     "query-string": "^7.1.1",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-openlayers": "^0.3.0",
     "react-router-dom": "^6.4.0",
