--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "weathersite-frontend",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://mamiyanonoka.pythonanywhere.com/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -12,6 +11,7 @@
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-openlayers": "^0.3.0",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
