--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "daisyui": "^2.27.0",
+    "leaflet": "^1.8.0",
     "query-string": "^7.1.1",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-leaflet": "^4.0.2",
     "react-openlayers": "^0.3.0",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
