--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "daisyui": "^2.27.0",
+    "image-map": "^2.0.1",
     "leaflet": "^1.8.0",
     "query-string": "^7.1.1",
     "react": "^18.2.0",
